--- a/config.yml.sample
+++ b/config.yml.sample
@@ -1,3 +1,4 @@
 default:
   baseurl: "https://www.datim.org/"
+  geourl: "https://geoalign.datim.org/"
   log_path: "/var/log/datapack/datapack.log"
